# nif_basestation

./: .gitignore  base_station_plot_config.xml  build.sh  join.sh  launch_joy.yaml  readme.md  setup.sh  viz.Dockerfile
fm/: adlink_fm.sh  bst_fm.sh
operations/: docker-compose.yml
operations/config/: cyclonedds.xml  launch_basestation.yaml
operations/dockerfiles/: basestation.Dockerfile
operations/scripts/: adlink_fm.sh  battery_monitor.sh  bst_docker_build.sh  bst_docker_join.sh  bst_docker_up.sh  bst_fm.sh  launch_basestation.sh  network_monitor.sh  remote_sensors_bagging.sh  remote_sensors_kill.sh  remote_spoof_kill.sh  remote_spoof_spawn.sh  setup.bash  shutdown.sh
src/: instructions.txt
src/bvs_msgs/msg/: SafetyStatus.msg
src/deep_orange_msgs/: CMakeLists.txt
src/deep_orange_msgs/msg/: BaseToCarSummary.msg  CtReport.msg  PtReport.msg  TireReport.msg
src/heartbeat_node/src/: FM_TX_heartbeat.cpp
src/intermediate_node/: CMakeLists.txt  package.xml
src/intermediate_node/launch/: intermediate_node.launch.py  intermediate_node_autonomous_lat.launch.py  intermediate_node_autonomous_lat_long.launch.py  intermediate_node_autonomous_lat_long.py
src/intermediate_node/src/: intermediate.cpp
src/joystick_vehicle_interface/: CMakeLists.txt  package.xml
src/joystick_vehicle_interface/src/: joystick_vehicle_interface.cpp
src/joystick_vehicle_interface_nodes/: CMakeLists.txt  package.xml
src/joystick_vehicle_interface_nodes/launch/: joystick_vehicle_interface_node.launch.py
src/joystick_vehicle_interface_nodes/param/: logitech_f310.default.param.yaml
src/joystick_vehicle_interface_nodes/src/: joystick_vehicle_interface_node.cpp
src/joystick_vehicle_interface_nodes/test/: mapping.cpp
src/nif_msgs/: CMakeLists.txt  package.xml
src/nif_msgs/msg/: AccelControlStatus.msg  AutonomyStatus.msg  DynamicTrajectory.msg  DynamicTrajectoryArray.msg  LocalizationStatus.msg  MissionStatus.msg  NodeStatus.msg  NodeStatusShort.msg  Perception3D.msg  PowertrainStatus.msg  SystemHealthStatus.msg  SystemStatus.msg  Telemetry.msg  TelemetryControl.msg  TelemetryLocalization.msg  TelemetryPtReport.msg  TerrainStatus.msg  Trajectory.msg  VelocityPlannerStatus.msg  Waypoints.msg  WaypointsArray.msg  ZoneStatus.msg
src/nif_msgs/srv/: GhostVehicleCreate.srv  GhostVehicleDestroy.srv  GhostVehicleGet.srv  GhostVehicleUpdateMaptrack.srv  GhostVehicleUpdatePose.srv  GhostVehicleUpdateVelocity.srv
src/nif_msgs_old/: CMakeLists.txt
src/nif_msgs_old/msg/: AutonomyStatusStamped.msg  ControlCommand.msg  DetectedObject.msg  MissionStatus.msg  Perception3D.msg  Perception3DArray.msg  SystemHealthStatus.msg  TelemetryControl.msg  TelemetryKinematic.msg  TelemetryLocalization.msg  TelemetryMiscReport.msg  (+2 more)
src/py_pubsub/: package.xml  setup.py
src/startup_interface/: package.xml
src/telemetry/: CMakeLists.txt  package.xml
src/telemetry_bs/: CMakeLists.txt  package.xml
src/userinput/: CMakeLists.txt
src/userinput/src/: publisher.cpp  race_flag_input.cpp
src/visualization/: package.xml
(+16 files in other folders)
